# Job-Board-Backend

./: .gitignore  pyproject.toml
src/: database.py  dbItems.py  db_items.py  main.py  models.py  service.py  try.py
src/domain/: contact_entity.py  job_entity.py
src/jobs/: db_items.py  models.py  router.py  schemas.py
src/models/: job_models.py
src/repositories/: jobs_repository.py
src/routers/: jobs_router.py
src/schemas/: contact_schemas.py  job_schemas.py
src/services/: input_validator.py  jobs_services.py
tests/: conftest.py  test_main.py  test_router.py
